--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,6 @@
       <% messages.forEach((message) => { %> <%- include('message', {message:
       message}) %> <% }); %>
     </ul>
+    <a href="/new">New Message</a>
   </body>
 </html>
