--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,3 +1,4 @@
 <li><%= message.user %></li>
 <p><%= message.text %></p>
 <p><%= message.added %></p>
+<a href="/messageDetail/<%= message.id %>">Open</a>
