Store messages in postgresql

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,4 +1,4 @@
-<li><%= message.user %></li>
-<p><%= message.text %></p>
+<li><%= message.author %></li>
+<p><%= message.msg %></p>
 <p><%= message.added %></p>
 <a href="/messageDetail/<%= message.id %>">Open</a>
