Add message detail from postgresql

--- a/views/form.ejs
+++ b/views/form.ejs
@@ -7,12 +7,12 @@
     <form class="flex-form" method="post" action="/new">
       <p>
         <label for="authorsName">Author's Name:</label>
-        <input type="text" id="authorsName" name="authorsName" />
+        <input type="text" id="authorsName" name="author" />
       </p>
       <br />
       <p>
         <label for="messageText">Message Text:</label>
-        <textarea name="messageText" id="messageText"></textarea>
+        <textarea name="msg" id="messageText"></textarea>
       </p>
       <br />
       <p>
