--- a/views/messageDetail.ejs
+++ b/views/messageDetail.ejs
@@ -1,4 +1,5 @@
 <h1><%= title %></h1>
-<p>User: <%= message.user %></p>
-<p>Text: <%= message.text %></p>
+<p>User: <%= message.author %></p>
+<p>Text: <%= message.msg %></p>
 <p>Added: <%= message.added %></p>
+<a href="/">Back Home</a>
